--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>enchant.jsでゲーム作り</title>
 </head>
 <body>
-  <canvas id="world"></canvas>
+  <!--<canvas id="world"></canvas>-->
   <script src="js/enchant.js"></script>
 </body>
 </html>
